# rrna-phylo

./: .gitignore  BIRDS_DATASET_SUMMARY.md  DOCUMENTATION_REVIEW.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SESSION_COMPLETE.md  STATUS.md  SUMMARY.md  requirements-dev.txt  requirements.txt
backend/: ARCHITECTURE.md  AUTO_BIAS_DETECTION.md  BOOTSTRAP_COMPLETE.md  CLEANUP_SUMMARY.md  CLI_USAGE.md  CPU_GPU_FIXES_COMPLETE.md  DEDUPLICATION_SUMMARY.md  OPENMP_CONFLICT_EXPLANATION.md  PERFORMANCE.md  PROJECT_STATUS.md  README.md  REFACTOR-PLAN-2025-11-21.md  REFACTORING-STATUS.md  TEST-STATUS.md  TESTING_REPORT.md  aligner.py  app.py  bionj.py  build_phylogenetic_tree.py  build_trees.py  clean_fasta_headers.py  cleanup_test.sh  compare_trees.py  deduplicate_fasta.py  demo_bootstrap.py  diagnose_openmp.py  distance.py  fasta_parser.py  generate_ete_viz.py  generate_ete_viz_simple.py  menu.py  migrate_structure.py  ml_tree.py  ml_tree_level2.py  ml_tree_level3.py  phylo_builder.py  prepare_fasta.py  profile_87seqs.py  protein_distance.py  protein_ml.py  (+43 more)
backend/data/: .gitignore  README.md
backend/rrna_phylo/: __init__.py  cli.py  config.py
backend/scripts/: cleanup_test_outputs.sh  create_birds_subset.py  create_synthetic_dataset.py  download_larger_dataset.py  download_real_dataset.py  download_silva_100species.py
backend/test_clean/: aligned_test_real_rrana.fasta  tree_upgma.nwk  tree_upgma_ascii.txt
backend/test_dedup/: aligned_test_real_rrana.fasta  tree_upgma_ascii.txt
backend/test_labels_ascii/: tree_upgma_ascii.txt
backend/tests/: test_aligner.py  (+11 more)
(+106 files in other folders)
