[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rrna-phylo"
version = "0.1.0"
description = "General-purpose phylogenetic tree inference for DNA, RNA, and Protein sequences"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "rRNA-Phylo Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rrna-phylo"
Repository = "https://github.com/yourusername/rrna-phylo"
Documentation = "https://github.com/yourusername/rrna-phylo/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["rrna_phylo*"]
exclude = ["tests*"]
